// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionSetBuilder should marshal allowedPermissions in multiple #withAllowedPermissions 1`] = `
{
  "allowAnonymous": false,
  "allowedPermissions": [
    {
      "identity": "max@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "sue@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "bob@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "SampleGroup",
      "identityType": "VirtualGroup",
    },
    {
      "identity": "SpecialGroup",
      "identityType": "VirtualGroup",
    },
    {
      "identity": "my_group",
      "identityType": "Group",
    },
  ],
  "deniedPermissions": [],
}
`;

exports[`PermissionSetBuilder should marshal both allowed and denied permissions  1`] = `
{
  "allowAnonymous": false,
  "allowedPermissions": [
    {
      "identity": "SampleGroup",
      "identityType": "VirtualGroup",
    },
    {
      "identity": "SpecialGroup",
      "identityType": "VirtualGroup",
    },
    {
      "identity": "my_group",
      "identityType": "Group",
    },
  ],
  "deniedPermissions": [
    {
      "identity": "max@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "sue@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "bob@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
  ],
}
`;

exports[`PermissionSetBuilder should marshal deniedPermissions in multiple #withDeniedPermissions 1`] = `
{
  "allowAnonymous": false,
  "allowedPermissions": [],
  "deniedPermissions": [
    {
      "identity": "max@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "sue@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "bob@foo.com",
      "identityType": "User",
      "securityProvider": "Email Security Provider",
    },
    {
      "identity": "SampleGroup",
      "identityType": "VirtualGroup",
    },
    {
      "identity": "SpecialGroup",
      "identityType": "VirtualGroup",
    },
    {
      "identity": "my_group",
      "identityType": "Group",
    },
  ],
}
`;
